# ACross

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  across_zh_CN.ts  flake.nix  package.json  qml.qrc  tsconfig.json  vcpkg.json
.github/workflows/: arch-build.yaml  arch-release-build.yaml  codeql.yml  msvc-build.yaml  msys2-mingw64-build.yaml  msys2-mingw64-release-build.yaml  nix-build.yaml
3rdpart/: .gitignore
cmake/: FindMagicEnum.cmake  FindSemver.cmake  FindSodium.cmake  FindSpdlog.cmake  FindZXingCPP.cmake  Findjsoncpp.cmake  Findmagic_enum.cmake  Findtomlplusplus.cmake  MagicEnum.cmake  Semver.cmake  SingleApplication.cmake  WinToast.cmake  buildinfo.cmake  grpc.cmake  protobuf.cmake  qml.cmake  qrc.cmake  translations.cmake  version.cmake
i18n/: across_zh_CN.ts  i18n.qrc
misc/: acolors.proto  across.proto  across.rc  across_example.json  across_example.toml  command.proto  org.arktoria.across.desktop  org.qv2ray.across.desktop  resource.h  v2ray_api.proto  v2ray_config.proto
misc/design/: logo.icns  svg2ico.sh
misc/screenshots/: README.md
msixbuild/: MsixBuild.wapproj  Package.appxmanifest
pkgbuild/arch/: .gitignore  PKGBUILD
pkgbuild/arch/across/: .SRCINFO  .gitignore  PKGBUILD
pkgbuild/arch/across-dev-git/: .SRCINFO  .gitignore  PKGBUILD  across-dev-git-0.1.3.r728.0fca6dc-6-x86_64-build.log.1  across-dev-git-0.1.3.r728.0fca6dc-6-x86_64-pkgver.log.2  test.sh
pkgbuild/msys2/: PKGBUILD
pkgbuild/msys2/across/: PKGBUILD
pkgbuild/msys2/across-dev-git/: PKGBUILD
src/: app.cpp  app.h  main.cpp
src/models/: acolorstools.cpp  acolorstools.h  apitools.cpp  apitools.h  clipboardtools.cpp  clipboardtools.h  confighelper.cpp  confighelper.h  coretools.cpp  coretools.h  cryptotools.cpp  cryptotools.h  dbtools.cpp  dbtools.h  dbustools.cpp  dbustools.h  envtools.cpp  envtools.h  jsontools.cpp  jsontools.h  logtools.cpp  logtools.h  networktools.cpp  networktools.h  notifytools.cpp  notifytools.h  qrcodetools.cpp  qrcodetools.h  serializetools.cpp  serializetools.h  version.h.in
src/view_models/: buildinfo.h.in  colors.cpp  colors.h  configtools.cpp  configtools.h  grouplist.cpp  grouplist.h  groupmodel.cpp  groupmodel.h  imageprovider.cpp  imageprovider.h  jsonhighlighter.cpp  jsonhighlighter.h  loghighlighter.cpp  loghighlighter.h  loglist.cpp  loglist.h  logmodel.cpp  logmodel.h  logtools.cpp  logtools.h  logview.cpp  logview.h  nodeformmodel.cpp  nodeformmodel.h  nodelist.cpp  nodelist.h  nodemodel.cpp  nodemodel.h  notificationmodel.cpp  notificationmodel.h  rawoutboundformmodel.cpp  rawoutboundformmodel.h  routinglist.cpp  routinglist.h  routingmodel.cpp  routingmodel.h  rulemodel.cpp  rulemodel.h  shadowsocksformmodel.cpp  (+9 more)
src/views/: main.qml
src/views/components/: ButtonBox.qml  CardBox.qml  ConfirmDialog.qml  DropDownBox.qml  NumBox.qml  RemoveConfirmDialog.qml  SVGBox.qml  SliderBox.qml  SwitchBox.qml  TextAreaBox.qml  TextFieldBox.qml  URLBox.qml
src/views/help/: About.qml  ChangeLog.qml  HelpPage.qml  LicenseListModels.qml  Licenses.qml
src/views/home/: CurrentPanel.qml  GroupControl.qml  GroupEditForm.qml  GroupForm.qml  GroupItemCard.qml  GroupItemPopMenu.qml  GroupListPanel.qml  HomePage.qml  ManualSetting.qml  NodeEditForm.qml  NodeForm.qml  NodeItemCard.qml  NodeItemPopMenu.qml  NodeListPanel.qml  NodeShareForm.qml  RawOutboundSetting.qml  ShadowsocksSetting.qml  ToolsBar.qml  TrojanSetting.qml  URLSchemeSetting.qml  VMESSSetting.qml
src/views/log/: AppLog.qml  CoreLog.qml  CoreLogList.qml  LogBox.qml  LogPage.qml
src/views/main/: DarkBackground.qml  PopMessageBox.qml  PopNotify.qml
src/views/menu/: InfoItem.qml  LogoItem.qml  MainPanel.qml  MenuItemCard.qml  MenuModel.qml
src/views/routing/: RoutingPage.qml  RuleItemCard.qml  RulePanel.qml
src/views/setting/: AColoRSItem.qml  AppearanceItem.qml  ApplicationItem.qml  CoreItem.qml  CorePathForm.qml  InboundItem.qml  SettingPage.qml
src/views/typescripts/: help.js  help.ts  home.js  home.ts  log.js  log.ts  main.js  main.ts
tests/grpcclient/: .gitignore
tests/jsonserver/: app.py
